<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="@string/section_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_event"
        android:title="@string/section_events"
        android:icon="@drawable/ic_calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reminder"

        android:title="@string/section_reminders"
        android:icon="@drawable/ic_reminder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_link"
        android:title="@string/section_links"
        android:icon="@drawable/ic_link"
        app:showAsAction="ifRoom" />
</menu>